--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -40,9 +40,9 @@ show_col_types = FALSE
 # Introduction
 Homelessness in Toronto presents a challenging and dynamic issue, influenced by demographic shifts, economic factors, and policy decisions. Despite a robust shelter system, designed to protect the city's most vulnerable, instances of individuals not benefiting from these services and facing tragic outcomes still occur. This paper aims to analyze demographic and geographic trends in shelter systems to leverage them to resolve and support future homeless shelter issues in Toronto.
 
-This study is designed for an in-depth analysis of Toronto's shelter occupancy and capacity, utilizing data [@ShelterData] from the Shelter Management Information System (SMIS) database. While there are extensive papers on homelessness, a clear gap exists in contemporary, data-driven analyses that integrate both demographic and geographic dimensions within the context of urban shelter systems. Previous studies have often been limited either in data scope or timeframe, failing to provide a comprehensive picture that reflects the current realities of urban homelessness. This paper addresses this gap better by offering an updated view of the shelter system in Toronto. 
+This study is designed for an in-depth analysis of Toronto's shelter occupancy and capacity, utilizing data [@ShelterData] from the Shelter Management Information System (SMIS) database. While there are several papers on homelessness, this paper more focus on data-driven analyses that integrate both demographic and geographic dimensions within the context of urban shelter systems. Other datasets have often been limited either in data scope or timeframe, failing to provide a comprehensive picture that reflects the current realities of urban homelessness. This paper addresses this gap better by offering an updated view of the shelter system in Toronto.
 
-This study analyzes shelter occupancy trends using a dataset [@ShelterData] from the Shelter Management Information System (SMIS) [@ShelterData], employing R [@r] statistical tools like `tidyverse` [@rTidyverse] and `ggplot2` [@rGgplot2]. Findings reveal a heavy reliance on bed-based capacities mainly for non-family groups but not for families, alongside high occupancy rates across Toronto. These results are vital for guiding policymakers and social welfare organizations in enhancing shelter capacities and accessibility, and in reevaluating strategies to more effectively address urban homelessness.
+In detail, this study analyzes shelter occupancy trends using a dataset [@ShelterData] from the Shelter Management Information System (SMIS) [@ShelterData], employing R [@r] statistical tools like `tidyverse` [@rTidyverse] and `ggplot2` [@rGgplot2]. Findings reveal and a heavy reliance on bed-based capacities mainly for non-family groups but not for families, alongside high occupancy rates across Toronto. These results are playing key roles for guiding policymakers and social welfare organizations in enhancing shelter capacities and accessibility, and in reevaluating strategies to more effectively address urban homelessness.
 
 To dissect the demographic and geographic patterns within the shelter system in Toronto, spotlighting trends in service utilization and capacity, this paper is organized into the following sections: Data (@sec-data), and Discussion (@sec-discussion).  In the Data section, I discuss a detailed description of the data source and collection methods. It then progresses to an analysis of demographic and geographic patterns in shelter usage, followed by a discussion on the observed trends and their broader implications. The final sections of the discussion part critically evaluate the study's limitations and propose directions for future research.
 
@@ -50,18 +50,18 @@ To dissect the demographic and geographic patterns within the shelter system in 
 
 ## Data Source
 
-This research is based on a dataset sourced from the Shelter Support and Housing Administration (SSHA) division's Shelter Management Information System (SMIS) database, which is accessible through the City of Toronto’s OpenDataToronto Library [@rOpenDataToronto]. The specific dataset employed is named  [@ShelterData]. This database acts as a detailed collection of daily entries related to active overnight shelter and associated services. It is the latest and most comprehensive dataset available for analyzing homelessness support services.
+This research is based on a dataset sourced from the Shelter Support and Housing Administration (SSHA) division's Shelter Management Information System (SMIS) database, which is accessible through the City of Toronto’s OpenDataToronto Library [@rOpenDataToronto]. The specific dataset employed is named 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData]. This database acts as a detailed collection of daily entries related to active overnight shelter and associated services. It is the latest and most comprehensive dataset available for analyzing homelessness support services.
 
 ## Data Collection
-In the process of selecting an appropriate data source for an in-depth analysis of current demographic and geographic trends within shelter services, several datasets were considered, including the 'Toronto Shelter System Flow data' [@ShelterSystemFlow] and the 'Daily Shelter Occupancy' [@DailyShelterOccupancy] datasets. However, the 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData] dataset was ultimately chosen for the following reasons:
+In the process of selecting an appropriate data source for an in-depth analysis of current demographic and geographic trends within shelter services, several datasets were considered. Two other datasets considered are the 'Toronto Shelter System Flow data' [@ShelterSystemFlow] and the 'Daily Shelter Occupancy' [@DailyShelterOccupancy] datasets. However, the 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData] dataset was ultimately chosen for the following reasons:
 
 1. While the 'Toronto Shelter System Flow' [@ShelterSystemFlow] data offers valuable insights into the flow of demography through the shelter system, it lacks comprehensive geographic information. This limitation significantly hinders the potential for a detailed analysis of geographic trends and patterns within the shelter system, an aspect critical to my research objectives.
 
-2. The 'Daily Shelter Occupancy' [@DailyShelterOccupancy] dataset, although previously a pertinent source of information, has become less relevant due to its discontinuation. The most recent update for this dataset was recorded on March 10, 2022, therefore it is outdated for current analysis purposes. In contrast, the 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData] dataset provides the most recent and comprehensive data available, making it a more suitable choice for analyzing up-to-date trends and developments in shelter usage and capacity.
+2. The 'Daily Shelter Occupancy' [@DailyShelterOccupancy] dataset, although previously a proper source of information, has become less relevant due to its discontinuation. The most recent update for this dataset was recorded on March 10, 2022, therefore it is outdated for current analysis purposes. In contrast, the 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData] dataset provides the most recent and comprehensive data available, making it a more suitable choice for analyzing up-to-date trends and developments in shelter usage and capacity.
 
 Consequently, the decision to utilize the 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData] dataset was driven by its superior relevance, up-to-date, and the inclusion of both demographic and geographic data, which are essential for a thorough and current analysis of shelter services.
 
-The methodology for gathering data is structured to ensure a detailed and current perspective of shelter and overnight service initiatives. The data was compiled and examined using the R statistical programming software [@r], supplemented by various tools such as `tidyverse` [@rTidyverse], `ggplot2` [@rGgplot2], `dplyr` [@rDplyr], `readr` [@rReadr], `tibble` [@rTibble], `janitor` [@rJanitor], `knitr` [@rknitr], and `here` [@rHere] (see @tbl-cleaned-shelter-statistics).
+The methodology for gathering data is structured to ensure a detailed and current perspective of shelter and overnight service. The data was compiled and examined using the R statistical programming software [@r], supplemented by various tools such as `tidyverse` [@rTidyverse], `ggplot2` [@rGgplot2], `dplyr` [@rDplyr], `readr` [@rReadr], `tibble` [@rTibble], `janitor` [@rJanitor], `knitr` [@rknitr], and `here` [@rHere] (see @tbl-cleaned-shelter-statistics).
 
 ```{r}
 #| message: false
@@ -106,7 +106,7 @@ ggplot(grouped_data, aes(x = sector, y = count, fill = capacity_type)) +
 
 A focused analysis of the capacity types utilized in shelter services reveals distinct patterns in the allocation and utilization of resources, particularly when comparing bed-based and room-based capacities across different user groups. Bed-based capacity is typically applicable for programs with common sleeping areas, while room-based capacity is measured at the room level where sleeping rooms are not shared by people from different households (see @fig-number-of-capacity-type-by-user-group). 
 
-A striking observation is the complete lack of bed-based capacity options for family group. This suggests that the current shelter system does not offer bed-specific accommodations for families, possibly due to the unique needs and privacy concerns associated with family units.
+A striking observation is the complete lack of bed-based capacity options for family groups. This suggests that the current shelter system does not offer bed-specific accommodations for families, possibly due to the unique needs and privacy concerns associated with family units.
 
 In contrast to the situation with families, other user groups predominantly utilize bed-based capacity in shelters. This trend is significant, indicating that for individuals and non-family groups, bed-based accommodations are the primary form of shelter provided. This form of capacity is likely favored due to its efficiency in maximizing space and accommodating a larger number of individuals within the shelter system.
 
@@ -174,23 +174,23 @@ ggplot(average_occupancy_rates, aes(x = occupancy_date, y = average_occupancy_ra
 
 ```
 
-The latest analysis of shelter occupancy data reveals a marked upward trend in average occupancy rates, rounded up at the first decimal place, over 21 days from January 1st to January 21st in 2024 (see @fig-average-occupancy-rate-by-date). While daily fluctuations were observed, the general direction was a steady increase in the need for shelter services. However, to provide a more comprehensive understanding, several critical aspects need to be incorporated into the discussion:
+The latest analysis of shelter occupancy data reveals a marked upward trend in average occupancy rates, rounded up at the first decimal place, over 21 days from January 1st to January 21st in 2024 (see @fig-average-occupancy-rate-by-date). While daily fluctuations were observed, the general direction was a steady increase in the need for shelter services. However, to provide a more comprehensive understanding, several critical aspects need to be considered in the discussion:
 
-1. **Overall Rising Trend and Demographic Patterns**: The data shows an overall increase in occupancy rates. This trend aligns with the Demographic Patterns of Homelessness, suggesting a balanced need for both bed-based and room-based capacities in shelters. Notably, there's a pronounced requirement for bed-based capacity, particularly for family user groups. This insight is crucial for shelter resources to meet the specific needs of different homeless populations effectively.
+1. **Overall Rising Trend and Demographic Patterns**: The data shows an overall increase in occupancy rates. This trend aligns with the demographic patterns of homelessness, suggesting a balanced need for both bed-based and room-based capacities in shelters. Notably, there's an obvious requirement for bed-based capacity, particularly for family user groups. This insight is crucial for shelter resources to meet the specific needs of different homeless populations effectively.
 
-2. **Geographic Patterns of Homelessness and Occupancy Rate**: The occupancy rates across all listed cities are consistently high, indicating a widespread demand for shelter services (see @fig-average-occupancy-rate-by-city). This requires effective management of existing resources in these areas. Additionally, providing safe travel options to vacant shelters in other cities and access to education to go back to society for the homeless might be significant considerations. These services can play an important role in enhancing the quality of life for homeless individuals and families, and in some cases, may aid in reducing the incidence of homelessness.
+2. **Geographic Patterns of Homelessness and Occupancy Rate**: The occupancy rates across all listed cities are consistently high, indicating a widespread demand for shelter services (see @fig-average-occupancy-rate-by-city). This requires effective management of existing resources in these areas. Additionally, providing safe travel options to the vacant shelters in other cities and access to education to go back to society for the homeless might be significant considerations. These services can play an important role in enhancing the quality of life for homeless individuals and families, and in some cases, may aid in reducing the incidence of homelessness.
 
 3. **Possible Issues**: Despite the high occupancy rates, none of the shelters reached or exceeded 100% capacity. This observation is contrasted with the visible presence of many homeless individuals on the streets. This contradiction indicates potential issues with accessibility or awareness of shelter services. To address this gap, shelter operators and advocacy groups need to intensify their efforts. This could involve improving outreach programs, enhancing the accessibility of shelters, and removing barriers that prevent homeless individuals from seeking shelter. By doing so, more individuals can be brought under the protection of shelter programs, thereby reducing the number of homeless people without adequate shelter.
 
 ## Limitations and Next Steps
 
 ### Limitations
-1. **Data Timeframe and Recency**: One of the primary limitations of this study is the timeframe of the data analyzed. The 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData] data contains the period from January 1st to January 21st, 2024. While the data has been updated daily since 2024, this analysis does not account for any updates or changes that may have occurred beyond January 21st. This restriction could potentially lead to minor inaccuracies or the omission of recent developments that could impact the findings and their relevance to the current situation. Additionally, the absence of data before 2024 limits the ability to observe significant trends and changes over a longer historical period.
+1. **Data Timeframe and Recency**: One of the primary limitations of this study is the timeframe of the data analyzed. The 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData] data contains the period from January 1st to January 21st, 2024. While the data has been updated daily since 2024, this analysis does not account for any updates or changes that may have occurred beyond January 21st, 2024. This restriction could potentially lead to minor inaccuracies or the omission of recent developments that could impact the findings and their relevance to the current situation. Additionally, the absence of data before 2024 limits the ability to observe significant trends and changes over a longer historical period.
 
-2. **Scope of Data Variables**: The analysis currently focuses on general occupancy rates without considering specific variables that could offer more detailed insights. For instance, the inclusion of variables such as the program model of shelters, the type of overnight services provided, or the program area could potentially yield more detailed and informative results. These factors can significantly influence shelter occupancy rates and patterns, and their exclusion from the analysis may limit the depth and applicability of the conclusions drawn.
+2. **Scope of Data Variables**: The analysis currently focuses on general occupancy rates without considering specific variables that could offer more detailed insights. For instance, the inclusion of variables such as the program model of shelters, the type of overnight services provided, or the program area could potentially yield more detailed and informative results. These factors can significantly influence shelter occupancy patterns, and their exclusion from the analysis may limit the depth and applicability of the conclusions drawn.
 
 ### Next Steps
-1. **Incorporation of Recent Data**: To address the limitation of the study's timeframe, future analyses should incorporate the most recent data containing a wider timeframe available. This approach will ensure that the findings are up-to-date and reflect the current state of shelter occupancy. Regular updates to the analysis will also help in monitoring trends over time, providing a dynamic view of the homelessness situation.
+1. **Incorporation of Recent Data**: To address the limitation of the study's timeframe, future analyses should follow the most recent data update containing a wider timeframe available. This approach will ensure that the findings are up-to-date and reflect the current state of shelter occupancy. Regular updates to the analysis will also help in monitoring trends over time, providing a dynamic view of the homelessness situation.
 
 2. **Expanding Data Parameters**: Future studies should aim to include additional variables such as the program model, service type, and program area of shelters. This expansion will allow for a more comprehensive analysis, potentially uncovering patterns and trends that are not evident from occupancy rates alone. For example, understanding how different program models affect occupancy rates can inform more targeted and effective policy decisions and resource allocation.
 
