--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -40,7 +40,7 @@ show_col_types = FALSE
 # Introduction
 Homelessness in Toronto presents a challenging and dynamic issue, influenced by demographic shifts, economic factors, and policy decisions. Despite a robust shelter system, designed to protect the city's most vulnerable, instances of individuals not benefiting from these services and facing tragic outcomes still occur. This paper aims to analyze demographic and geographic trends in shelter systems to leverage them to resolve and support future homeless shelter issues in Toronto.
 
-This study is designed for an in-depth analysis of Toronto's shelter occupancy and capacity, utilizing data [@ShelterData] from the Shelter Management Information System (SMIS) database. While there are several papers on homelessness, this paper more focus on data-driven analyses that integrate both demographic and geographic dimensions within the context of urban shelter systems. Other datasets have often been limited either in data scope or timeframe, failing to provide a comprehensive picture that reflects the current realities of urban homelessness. This paper addresses this gap better by offering an updated view of the shelter system in Toronto.
+This study is designed for an in-depth analysis of Toronto's shelter occupancy and capacity, utilizing data [@ShelterData] from the Shelter Management Information System (SMIS) database. While there are several papers on homelessness, this paper more focus on data-driven analyses that integrate both demographic and geographic dimensions within the context of urban shelter systems. Other datasets have often been limited either in data scope or timeframe, failing to provide a picture that reflects the current realities of urban homelessness. This paper addresses this gap better by offering an updated view of the shelter system in Toronto.
 
 In detail, this study analyzes shelter occupancy trends using a dataset [@ShelterData] from the Shelter Management Information System (SMIS) [@ShelterData], employing R [@r] statistical tools like `tidyverse` [@rTidyverse] and `ggplot2` [@rGgplot2]. Findings reveal and a heavy reliance on bed-based capacities mainly for non-family groups but not for families, alongside high occupancy rates across Toronto. These results are playing key roles for guiding policymakers and social welfare organizations in enhancing shelter capacities and accessibility, and in reevaluating strategies to more effectively address urban homelessness.
 
@@ -50,14 +50,14 @@ To dissect the demographic and geographic patterns within the shelter system in 
 
 ## Data Source
 
-This research is based on a dataset sourced from the Shelter Support and Housing Administration (SSHA) division's Shelter Management Information System (SMIS) database, which is accessible through the City of Toronto’s OpenDataToronto Library [@rOpenDataToronto]. The specific dataset employed is named 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData]. This database acts as a detailed collection of daily entries related to active overnight shelter and associated services. It is the latest and most comprehensive dataset available for analyzing homelessness support services.
+This research is based on a dataset sourced from the Shelter Support and Housing Administration (SSHA) division's Shelter Management Information System (SMIS) database, which is accessible through the City of Toronto’s OpenDataToronto Library [@rOpenDataToronto]. The specific dataset employed is named 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData]. This database acts as a detailed collection of daily entries related to active overnight shelters and associated services.
 
 ## Data Collection
 In the process of selecting an appropriate data source for an in-depth analysis of current demographic and geographic trends within shelter services, several datasets were considered. Two other datasets considered are the 'Toronto Shelter System Flow data' [@ShelterSystemFlow] and the 'Daily Shelter Occupancy' [@DailyShelterOccupancy] datasets. However, the 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData] dataset was ultimately chosen for the following reasons:
 
-1. While the 'Toronto Shelter System Flow' [@ShelterSystemFlow] data offers valuable insights into the flow of demography through the shelter system, it lacks comprehensive geographic information. This limitation significantly hinders the potential for a detailed analysis of geographic trends and patterns within the shelter system, an aspect critical to my research objectives.
+1. While the 'Toronto Shelter System Flow' [@ShelterSystemFlow] data offers valuable insights into the flow of demography through the shelter system, it lacks geographic information. This limitation significantly hinders the potential for a detailed analysis of geographic trends and patterns within the shelter system, an aspect critical to my research objectives.
 
-2. The 'Daily Shelter Occupancy' [@DailyShelterOccupancy] dataset, although previously a proper source of information, has become less relevant due to its discontinuation. The most recent update for this dataset was recorded on March 10, 2022, therefore it is outdated for current analysis purposes. In contrast, the 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData] dataset provides the most recent and comprehensive data available, making it a more suitable choice for analyzing up-to-date trends and developments in shelter usage and capacity.
+2. The 'Daily Shelter Occupancy' [@DailyShelterOccupancy] dataset, although previously a proper source of information, has become less relevant due to its discontinuation. The most recent update for this dataset was recorded on March 10, 2022, therefore it is outdated for current analysis purposes. In contrast, the 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData] dataset provides the most recent and thorough data available, making it a more suitable choice for analyzing up-to-date trends and developments in shelter usage and capacity.
 
 Consequently, the decision to utilize the 'Daily Shelter & Overnight Service Occupancy & Capacity' [@ShelterData] dataset was driven by its superior relevance, up-to-date, and the inclusion of both demographic and geographic data, which are essential for a thorough and current analysis of shelter services.
 
@@ -174,7 +174,7 @@ ggplot(average_occupancy_rates, aes(x = occupancy_date, y = average_occupancy_ra
 
 ```
 
-The latest analysis of shelter occupancy data reveals a marked upward trend in average occupancy rates, rounded up at the first decimal place, over 21 days from January 1st to January 21st in 2024 (see @fig-average-occupancy-rate-by-date). While daily fluctuations were observed, the general direction was a steady increase in the need for shelter services. However, to provide a more comprehensive understanding, several critical aspects need to be considered in the discussion:
+The latest analysis of shelter occupancy data reveals a marked upward trend in average occupancy rates, rounded up at the first decimal place, over 21 days from January 1st to January 21st in 2024 (see @fig-average-occupancy-rate-by-date). While daily fluctuations were observed, the general direction was a steady increase in the need for shelter services. However, to provide a more thorough understanding, several critical aspects need to be considered in the discussion:
 
 1. **Overall Rising Trend and Demographic Patterns**: The data shows an overall increase in occupancy rates. This trend aligns with the demographic patterns of homelessness, suggesting a balanced need for both bed-based and room-based capacities in shelters. Notably, there's an obvious requirement for bed-based capacity, particularly for family user groups. This insight is crucial for shelter resources to meet the specific needs of different homeless populations effectively.
 
@@ -192,9 +192,9 @@ The latest analysis of shelter occupancy data reveals a marked upward trend in a
 ### Next Steps
 1. **Incorporation of Recent Data**: To address the limitation of the study's timeframe, future analyses should follow the most recent data update containing a wider timeframe available. This approach will ensure that the findings are up-to-date and reflect the current state of shelter occupancy. Regular updates to the analysis will also help in monitoring trends over time, providing a dynamic view of the homelessness situation.
 
-2. **Expanding Data Parameters**: Future studies should aim to include additional variables such as the program model, service type, and program area of shelters. This expansion will allow for a more comprehensive analysis, potentially uncovering patterns and trends that are not evident from occupancy rates alone. For example, understanding how different program models affect occupancy rates can inform more targeted and effective policy decisions and resource allocation.
+2. **Expanding Data Parameters**: Future studies should aim to include additional variables such as the program model, service type, and program area of shelters. This expansion will allow for a more thorough analysis, potentially uncovering patterns and trends that are not evident from occupancy rates alone. For example, understanding how different program models affect occupancy rates can inform more targeted and effective policy decisions and resource allocation.
 
-In conclusion, while this study provides important insights into shelter occupancy trends, its scope and the recency of data are somewhat limited. Future research efforts should aim to overcome these limitations by incorporating more comprehensive and up-to-date data, thereby enriching the understanding of homelessness and informing more effective responses to this pressing social issue.
+In conclusion, while this study provides important insights into shelter occupancy trends, its scope and the recency of data are somewhat limited. Future research efforts should aim to overcome these limitations by incorporating more thorough and up-to-date data, thereby enriching the understanding of homelessness and informing more effective responses to this pressing social issue.
 
 \newpage
 
